--- a/gh-buttons.less
+++ b/gh-buttons.less
@@ -1,5 +1,6 @@
 /* ------------------------------------------
 CSS3 GITHUB BUTTONS (Nicolas Gallagher)
+LESS EDITION (Martin Backhaus)
 Licensed under Unlicense 
 http://github.com/necolas/css3-github-buttons
 ------------------------------------------ */
